docs: move all docs into folder

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "description": "documentation for sora-editor",
   "scripts": {
-    "dev": "vitepress dev",
-    "build": "vitepress build",
-    "preview": "vitepress preview"
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs"
   },
   "devDependencies": {
     "markdown-it-mathjax3": "^4.3.2",
